Featured Area and Featured News bug fixed on mobile screen.

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -837,6 +837,11 @@ a {
 		}
 
 		.fg-item {
+			@media screen and (max-width: 767px){
+				img{
+					width: 100% !important;
+				}
+			}
 			position: relative;
 			overflow: hidden;
 			-webkit-backface-visibility: hidden;
@@ -847,11 +852,11 @@ a {
 				.transition(1s all ease);
 				right: 0;
 				bottom: 0;
-				background: fade(desaturate(black,30%), 50%);
+				background: fade(desaturate(black, 30%), 50%);
 				.transform(scale(1));
 				h3 {
 					text-align: center;
-					color: fade(white,80%);
+					color: fade(white, 80%);
 					display: block;
 					text-align: center;
 					font-weight: 300;
@@ -866,26 +871,29 @@ a {
 					.transform(translateY(-50%));
 					position: absolute;
 					@media screen and (max-width: 767px) {
-						font-size: 12px;	
+						font-size: 12px;
 					}
 				}
 				opacity: 1;
 			}
-			&:hover {
-				.product-details {
-					opacity: 1;
-					.transform(scale(1));
+			@media screen and (min-width: 767px) {
+				&:hover {
+					.product-details {
+						opacity: 1;
+						.transform(scale(1));
+					}
+					img {
+						.transform(scale(1.3));
+						-webkit-filter: brightness(0.5);
+						filter: brightness(0.5);
+					}
 				}
+
 				img {
-					.transform(scale(1.3));
-					-webkit-filter: brightness(0.5);
-					filter: brightness(0.5);
+					width: 100%;
+					.transition(0.4s all ease);
+					-webkit-backface-visibility: hidden;
 				}
-			}
-			img {
-				width: 100%;
-				.transition(0.4s all ease);
-				-webkit-backface-visibility: hidden;
 			}
 		}
 		.fg-item-last {
@@ -901,8 +909,10 @@ a {
 					border: solid 3px #eee;
 					color: #eee;
 					.transition(0.2s all ease);
+					@media screen and (min-width:767px){
 					&:hover {
 						.transform(scale(1.1));
+					}
 					}
 				}
 			}
@@ -919,6 +929,12 @@ a {
 			.fg-item {
 				overflow: hidden;
 				position: relative;
+				@media screen and (max-width: 767px){
+					img {
+						width: 100% !important;
+					}
+				}
+
 			}
 			.product-details {
 				position: absolute;
@@ -938,13 +954,18 @@ a {
 			}
 			img {
 					.transition(0.4s all ease);
+				@media screen and (max-width: 767px){
+					width: 100% !important;
 				}
-			&:hover {
-				img {
-					.transform(scale(1.02));
-					-webkit-filter: grayscale(1);
-					filter: grayscale(1);
-					.transition(0.8s all ease);
+				}
+			@media screen and (min-width: 767px) {
+				&:hover {
+					img {
+						.transform(scale(1.02));
+						-webkit-filter: grayscale(1);
+						filter: grayscale(1);
+						.transition(0.8s all ease);
+					}
 				}
 			}
 		}
@@ -1692,14 +1713,16 @@ a {
 			.transition(0.4s all ease);
 		}
 	}
-	&:hover {
-		img {
-			-webkit-filter: brightness(1);	
-			filter: brightness(1);
-		}
-		.entry-header a {
-			background: fade(black,70%);
-			color: #eee;
+	@media screen and (min-width: 767px) {
+		&:hover {
+			img {
+				-webkit-filter: brightness(1);
+				filter: brightness(1);
+			}
+			.entry-header a {
+				background: fade(black, 70%);
+				color: #eee;
+			}
 		}
 	}
 	.property-info {
